tests/bad_dataflow_3.out
STDOUT:

STDERR:
CFG lowering error in function main: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: BBId(3), phi_dest: ValueRef(4, 29..30, Some(VarId(0)), None), phi_var_id: Some(VarId(0)), sources: {BBId(1): Value(ValueRef(2, 54..59, Some(VarId(0)), None))}, missing_sources: {BBId(2)} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(3), dest_val: ValueRef(3, 91..92, Some(VarId(0)), None), assigned_val: Value(ValueRef(4, 29..30, Some(VarId(0)), None)), missing_sources: {} }], phi_assignments: [], malformed_tails: [SingleMalformedTailInfo { bb_id: BBId(3), missing_sources: {} }], blocks: [BasicBlock { id: BBId(0), phi: [], instructions: [Assign { dest: ValueRef(0, 41..42, None, None), val: Const(1) }], tail: CondBranch { cond: ValueRef(0, 41..42, None, None), then_bb: BBId(1), else_bb: BBId(2) }, successors: [BBId(1), BBId(2)], predecessors: [] }, BasicBlock { id: BBId(1), phi: [], instructions: [Assign { dest: ValueRef(1, 58..59, None, None), val: Const(5) }, Assign { dest: ValueRef(2, 54..59, Some(VarId(0)), None), val: Value(ValueRef(1, 58..59, None, None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(2), phi: [], instructions: [], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(3), phi: [PhiCfgInstruction { dest: ValueRef(4, 29..30, Some(VarId(0)), None), sources: {BBId(1): Value(ValueRef(2, 54..59, Some(VarId(0)), None))}, var_id: Some(VarId(0)) }], instructions: [Assign { dest: ValueRef(3, 91..92, Some(VarId(0)), None), val: Value(ValueRef(4, 29..30, Some(VarId(0)), None)) }], tail: Return { value: Some(ValueRef(3, 91..92, Some(VarId(0)), None)) }, successors: [], predecessors: [BBId(1), BBId(2)] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow_3.c:10:12
   │
 3 │     int x;
   │         - Variable declaration site
   ·
10 │     return x;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  BB0 [label="BB0:\n    %0 = const 1\n    br_cond %0 ? BB1 : BB2;\n"];
  BB1 [label="BB1:\n    %1 = const 5\n    %2 = %1 (x)\n    br BB3\n"];
  BB2 [label="BB2:\n    br BB3\n"];
  BB3 [label="BB3:\n    %4 = Φ(%2@BB1 [malformed: missing from BBs [2]]) (x)\n    %3 = %4 [malformed: missing from BBs []] (x)\n    return %3\n"];
  BB0 -> BB1;
  BB0 -> BB2;
  BB1 -> BB3;
  BB2 -> BB3 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
