tests/bad_dataflow_3.c
//@FAIL
int main() {
    int x;

    if (1) {
        x = 5;
    }else {
    }

    return x;
}